// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SerialConsoleActions 1`] = `
<DocumentFragment>
  <div
    class="consoleActionsSerial-0-2-1"
  >
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      Disconnect
    </button>
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      Reset
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render SerialConsoleActions with custom texts 1`] = `
<DocumentFragment>
  <div
    class="consoleActionsSerial-0-2-1"
  >
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      My Disconnect Text
    </button>
    <button
      aria-disabled="false"
      class="pf-v6-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-4"
      data-ouia-component-type="PF6/Button"
      data-ouia-safe="true"
      type="button"
    >
      My Reconnect Text
    </button>
  </div>
</DocumentFragment>
`;
